# pixpick

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  backends.md  frameworks.md  getting-started.md  index.md  roadmap.md  selectors.md
pixpick/:  __init__.py  README.md  __init__.py  utils.py
pixpick/adapters/: base.py  yolo.py
pixpick/backends/: base.py  cv2_backend.py
pixpick/core/: box.py  line.py  polygon.py  selection.py
pixpick/selectors/: box.py  box_picker.py  line.py  line_picker.py  polygon.py  polygon_picker.py
tests/: test_pixpick.py
